k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world

    spec:
      containers:
        - name: flask-container
          image: flaskwithgithubactions_flask_app
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
              protocol: TCP
